[project]
name = "AluBot"
version = "0.1.0"
description = "Personal Discord Bot"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Aluerie", email = "aluerie@gmail.com" }]
maintainers = [{ name = "Aluerie", email = "aluerie@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python ",
    "Topic :: Utilities",
    "Topic :: Discord Bots",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp==3.13.2",
    "asyncpg==0.30.0",
    "beautifulsoup4==4.14.2",
    "click>=8.1.8",
    "dateparser==1.2.2",
    "discord-py[speed,voice]~=2.6.4",
    "emoji==2.15.0",
    "ffmpeg>=1.4",
    "githubkit==0.13.5",
    "gtts~=2.5.4",
    "jishaku",
    "lru-dict==1.3.0",
    "lxml>=6.0.2",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "orjson>=3.11.5",
    "parsedatetime==2.6",
    "pillow==12.0.0",
    "psutil==7.1.2",
    "pulsefire~=2.0.29",
    "pygit2==1.19.0",
    "python-dateutil==2.9.0.post0",
    "role-identification",
    "steamio>=1.1.0",
    "tabulate==0.9.0",
    "thefuzz==0.22.1",
    "twitchio[starlette]~=3.1.0",
    "unidiff==0.7.5",
    "urllib3>=2.6.2",
    "uvloop==0.22.1 ; sys_platform == 'linux'",
    "wordcloud==1.9.4",
]

[tool.uv.sources]
steamio = { git = "https://github.com/Aluerie/steam.py", rev = "introduce-ext.dota2" }
jishaku = { git = "https://github.com/Gorialis/jishaku.git" }
role-identification = { git = "https://github.com/meraki-analytics/role-identification.git" }

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.2",
    "ipykernel>=7.1.0",
]

[[tool.uv.index]]
name = "umbra"
url = "https://about.abstractumbra.dev/pip/"
explicit = true

[project.urls]
Homepage = "https://github.com/Aluerie/AluBot"

# 1. PYRIGHT
# 
# Links:
# * Rules: 
#   https://microsoft.github.io/pyright/#/configuration?id=type-check-rule-overrides
# * Defaults per type checking mode:
#   https://microsoft.github.io/pyright/#/configuration?id=diagnostic-settings-defaults
# 
# In my personal projects, I like to select `typeCheckingMode` as "strict" and 
# turn on all optional settings on and then explicitly mention which should be lower severity or "none" at all.
# Basically, visit the second link, turn on all "false" and "none" and then fine-tune it. 

[tool.pyright]
# 1A. Environment Options
exclude = ["venv", "docs", "**/__pycache__"] # TODO: Change to .venv
pythonVersion = "3.12" # TODO: Distant future - upgrade to 3.14+, I'm excited and scared for annotation changes;

# 1B. Type Evaluation Settings
deprecateTypingAliases = true

# 1C. Type Check Diagnostics Settings
typeCheckingMode = "strict"

# 1D. Type Check Rule Overrides

# 1D.1. Elevating "none" in strict type checking to warnings
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImplicitStringConcatenation = "warning"  # TODO: `none` in SinBad as "overly-worrisome linter-esque options"
reportImportCycles = "warning"
reportMissingSuperCall = "warning"  # TODO: `none` in SinBad
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnreachable = "warning"

# 1D.2. Overly-worrisome linter-esque options
reportUnusedCallResult = "none"

# 1X. NOT SURE NOT CATEGORIZED
reportDuplicateImport = "error" # "none"  # TODO: should it be just handled by ruff ??? `none` in SinBad as "overly-worrisome linter-esque options"

# 1Z. OLD 
# My Additions.

# reportUnusedCoroutine = "warning" # TODO: is there a point for those to be warnings ?
# reportUnusedExpression = "warning"

# reportUnusedImport = "warning"
# reportUnusedClass = "warning"
# reportUnusedFunction = "warning"
# reportUnusedVariable = "warning"

# reportDeprecated = "warning"
# reportUnnecessaryCast = "warning"

# MY OLD

# reportMissingTypeStubs = "none"    # A lot of libraries don't have stubs.
# reportPrivateUsage = "none"        # it's my choice x_x

# # there is a lot of **Incompatible** overriding in discord.py Bot development
# # like `convert(ctx: AluContext, argument: str)` in converters.
# reportIncompatibleVariableOverride = "none"
# reportIncompatibleMethodOverride = "none"

# reportUnnecessaryIsInstance = "none"           # I like "else" raising the error if type is somehow not it


# # Unknown stuff - a lot of libraries do not **properly** declare types for everything
# reportUnknownMemberType = "none"
# reportUnknownVariableType = "none"
# reportUnknownArgumentType = "none"

# 1. Good 
# Examples of good Ruff configurations:
# * https://github.com/AbstractUmbra/Mipha/blob/main/pyproject.toml
# * https://github.com/mikeshardmind/async-utils/blob/main/pyproject.toml
# * https://github.com/Rapptz/discord.py/blob/master/pyproject.toml
# https://docs.astral.sh/ruff/rules/
[tool.ruff]
line-length = 125
target-version = "py312"
exclude = ["venv", "docs"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    # 0. Toggle - still thinking if we need those
    "D",      # pydocstyle: Doc-strings, 
    "D417",   # Missing argument description. Otherwise, it keeps asking to document interaction/context args.
    "DOC",    # pydoclint: Doc strings, 
    "ERA",    # eradicate: Found commented-out code
    "RUF100", # unused-noqa: Unused noqa directive

    # 1. Conflict with Ruff as a formatter, recommendation: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment 
    "E117",   # over-indented
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes 
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC002", # multi-line-implicit-string-concatenation

    # 2. Pyright should manage those
    # "F401",

    # 1. General "public" disagreement with Ruff
    "ANN401",   # `Any` is the correct type in some cases
    "ASYNC116", # Long sleeps are fine
    "ASYNC109", # Discord.py and other libraries commonly use this parameter
    "C90",      # McCabe complexity memes
    "CPY001",   # Copyright stuff
    "F401",
    "F402", 
    "F403",
    "F405", 	
    "FBT003",   # Wrong end to enforce this on.
    "FIX",      # Wrong place to enforce this, Todo Tree extension (or any other) is advised.
    "INP001",   # Due to how we load modules this results in annoyances
    "PD011",    # This is not a numpy codebase
    "PLC0415",  # ruff gets this wrong, import needs to be not at top of file in some cases
    "PLR0904",  # **too many** public methods
    "PLR0911",  # **too many** returns
    "PLR0912",  # **too many** branches
    "PLR0913",  # **too many** function arguments
    "PLR0914",  # **too many** variables
    "PLR0915",  # **too many** statements: come on, not everything is solvable in <50 lines.
    "PLR0917",  # **too many** positional arguments
    "PLR6301",
    "PLR2004",  # Most people hate this rule - might remove later.
    "PYI058",   # This opinionated "fix" causes incompatibilities with things expecting a generator.
    "RUF001",   # Ambiguous characters not something I want to enforce here.
    "RUF029",   # Don't try and tell me I'm wrong for async def when something is for an interface.
    "S101",     # `assert` is used for type checking in this codebase, blame typing memes.
    "S311",     # Standard pseudo-random generators are not suitable for **cryptographic** purposes, so what.
    "SIM105",   # Suppressible exception, I'm not paying the overhead of `contextlib.suppress` for stylistic choices.
    "SLF001",
    "TD",       # Wrong place to enforce this, Todo Tree extension (or any other) is advised.
    "TRY003",   # over-eager rule
    "TRY301",   # unrealistic rule
    
    # 2. Personal disagreement
    "FLY002",
    "PLW2901", # Redefined loop name;
    "S608",    # I use f-strings with SQL and I don't know better;
    "TID252",  # My relative imports are quite well structured 

    # 3. Doc String
    "D100",   # Module level docs aren't always needed.
    "D104",   # Public package level docs aren't always needed.
    "D105",   # Documenting magic methods is often dumb.
    "D107",   # `__init__` is the wrong place to doc this.
    "D401",   # Not enforcing the imperative verb rule.
    "DOC201", # Not documenting generic return types
    "DOC402", # Not documenting generic `yield` types
    "DOC501", # Not explicitly documenting raised exception types
]
unfixable = [
    "E501",   # Line length handled in other ways by ruff formatter.
    "ERA",    # Don't delete commented out code.
    "RUF100", # Unused `noqa` directive. I prefer to deal with it manually, also annoying when toggling some rules.
]

[tool.ruff.lint.per-file-ignores]
"ext/beta.py" = ["ANN201"]
"*.ipynb" = ["ANN204", "D", "DOC", "ERA", "F404", "T20", "W391"]

[tool.ruff.format]
quote-style = "double"             # Like Black, use double quotes for strings.
indent-style = "space"             # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.
line-ending = "auto"               # Like Black, automatically detect the appropriate line ending.

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

# DEPRECATED

[tool.black]
# We use Ruff instead
line-length = 125
target-version = ["py312"]

[tool.isort]
# We use Ruff instead
profile = "black"
line_length = 125
combine_as_imports = true
combine_star = true
