[project]
name = "AluBot"
version = "0.7.7"
description = "Personal Discord Bot"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
authors = [{ name = "Aluerie", email = "aluerie@gmail.com" }]
maintainers = [{ name = "Aluerie", email = "aluerie@gmail.com" }]
urls.Homepage = "https://github.com/Aluerie/AluBot"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python ",
    "Topic :: Discord Bots",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles",
    "aiohttp",
    "asyncpg",
    "beautifulsoup4",
    "click",
    "dateparser",
    "discord-py[speed,voice]",
    "emoji",
    "ffmpeg",
    "githubkit",
    "gtts",
    "jishaku",
    "lru-dict",
    "lxml",
    "matplotlib",
    "numpy",
    "orjson",
    "parsedatetime",
    "pillow",
    "psutil",
    "pulsefire",
    "pygit2",
    "python-dateutil",
    "role-identification",
    "steamio",
    "tabulate",
    "thefuzz",
    "twitchio[starlette]",
    "unidiff",
    "urllib3",
    "uvloop ; sys_platform == 'linux'",
    "wordcloud",
]


[tool.uv.sources]
steamio = { git = "https://github.com/Aluerie/steam.py", rev = "introduce-ext.dota2" }
jishaku = { git = "https://github.com/Gorialis/jishaku.git" }
role-identification = { git = "https://github.com/meraki-analytics/role-identification.git" }

[dependency-groups]
dev = [
    "asyncpg-stubs",
    "ipykernel",
]

[[tool.uv.index]]
name = "umbra"
url = "https://about.abstractumbra.dev/pip/"
explicit = true

# ##############################
# SHARED PYPROJECT TOML CONFIG #
# ##############################
#
# Shared with `Aluerie/IreBot` (twitch/discord bot - same thing pretty much), 
# but here I will try to leave detailed explanations why this or that setting was chosen.
# In `Aluerie/IreBot` - it won't contain any, just strictly configuration.

# 0. EXAMPLES OF GOOD PYPROJECT.TOML 
#
# * https://github.com/AbstractUmbra/Mipha/blob/main/pyproject.toml
# * https://github.com/mikeshardmind/async-utils/blob/main/pyproject.toml

# 1. PYRIGHT
# 
# Links:
# * Rules: 
#   https://microsoft.github.io/pyright/#/configuration?id=type-check-rule-overrides
# * Defaults per type checking mode:
#   https://microsoft.github.io/pyright/#/configuration?id=diagnostic-settings-defaults

[tool.pyright]
exclude = [".venv", "docs", "**/__pycache__", "**/node_modules", "**/.*"]
pythonVersion = "3.12"
deprecateTypingAliases = true
typeCheckingMode = "strict"

# 1.1. Rules that are "None" by default even in strict - let's explicitly set them
reportCallInDefaultInitializer      = "warning" #
reportImplicitOverride              = "warning" #
reportImplicitStringConcatenation   = "warning" # Linter-esque option but it works better than Ruff's ISC002.
reportImportCycles                  = "none"    # Not smart enough; doesn't understand `if TYPE_CHECKING`.
reportMissingSuperCall              = "none"    # Not smart enough; Base parent class does not needs `super().__init__` from `object`. 
reportPropertyTypeMismatch          = "warning" #
reportUninitializedInstanceVariable = "warning" # 
reportUnnecessaryTypeIgnoreComment  = "warning" # 
reportUnreachable                   = "warning" #
reportUnusedCallResult              = "none"    # (Overly-worrisome) linter-esque option.

# 1.2. Rejected rules;
reportDuplicateImport            = "none" # handled by Ruff, linter-esque option.
reportIncompatibleMethodOverride = "none" # Dpy and general workflow of subclassing base models require such overwrites.
reportMissingTypeStubs           = "none" # I'm not going to write stubs for all the libraries that don't have them. And some libraries are fully typed without any stubs anyway.

# 2. RUFF
# 
# * Ruff configuration rules
#   https://docs.astral.sh/ruff/rules/

[tool.ruff]
line-length = 125
target-version = "py312"
exclude = [".venv", "docs"]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # 0. Situational toggles 
    # "ERA",    # eradicate: Found commented-out code
    # "RUF100", # unused-noqa: toggle off when we play around with some rules

    # 0. Uncategorized - still thinking if we need those
    "D",      # pydocstyle: Doc-strings, 
    "D417",   # Missing argument description. Otherwise, it keeps asking to document interaction/context args.
    "DOC",    # pydoclint: Doc strings, 

    # 1. Handled by Ruff Formatter instead
    # Recommendation from: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules.
    "W191",   # tab-indentation                           #
    "E111",   # indentation-with-invalid-multiple         #
    "E114",   # indentation-with-invalid-multiple-comment #
    "E117",   # over-indented                             #
    "D206",   # docstring-tab-indentation                 #
    "D300",   # triple-single-quotes                      #
    "Q000",   # bad-quotes-inline-string                  #
    "Q001",   # bad-quotes-multiline-string               #
    "Q002",   # bad-quotes-docstring                      #
    "Q003",   # avoidable-escaped-quote                   #
    "COM812", # missing-trailing-comma                    #
    "COM819", # prohibited-trailing-comma                 #
    "ISC002", # multi-line-implicit-string-concatenation  #

    # 2. Pyright should manage those
    # "F401",

    # 1. General "public" disagreement with Ruff
    "ANN401",   # `Any` is the correct type in some cases
    "ASYNC116", # Long sleeps are fine
    "ASYNC109", # Discord.py and other libraries commonly use this parameter
    "C90",      # McCabe complexity memes
    "CPY001",   # Copyright stuff
    "F401",
    "F402", 
    "F403",
    "F405", 	
    "FBT003",   # Wrong end to enforce this on.
    "FIX",      # Wrong place to enforce this, Todo Tree extension (or any other) is advised.
    "INP001",   # Due to how we load modules this results in annoyances
    "PD011",    # This is not a numpy codebase
    "PLC0415",  # ruff gets this wrong, import needs to be not at top of file in some cases
    "PLR0904",  # **too many** public methods
    "PLR0911",  # **too many** returns
    "PLR0912",  # **too many** branches
    "PLR0913",  # **too many** function arguments
    "PLR0914",  # **too many** variables
    "PLR0915",  # **too many** statements: come on, not everything is solvable in <50 lines.
    "PLR0917",  # **too many** positional arguments
    "PLR6301",
    "PLR2004",  # Most people hate this rule - might remove later.
    "PYI058",   # This opinionated "fix" causes incompatibilities with things expecting a generator.
    "RUF001",   # Ambiguous characters not something I want to enforce here.
    "RUF029",   # Don't try and tell me I'm wrong for async def when something is for an interface.
    "S101",     # `assert` is used for type checking in this codebase, blame typing memes.
    "S311",     # Standard pseudo-random generators are not suitable for **cryptographic** purposes, so what.
    "SIM105",   # Suppressible exception, I'm not paying the overhead of `contextlib.suppress` for stylistic choices.
    "SLF001",
    "TD",       # Wrong place to enforce this, Todo Tree extension (or any other) is advised.
    "TRY003",   # over-eager rule
    "TRY301",   # unrealistic rule
    
    # 2. Personal disagreement
    "FLY002",
    "PLW2901", # Redefined loop name;
    "S608",    # I use f-strings with SQL and I don't know better;
    "TID252",  # My relative imports are quite well structured 

    # 3. Doc String
    "D100",   # Module level docs aren't always needed.
    "D104",   # Public package level docs aren't always needed.
    "D105",   # Documenting magic methods is often dumb.
    "D107",   # `__init__` is the wrong place to doc this.
    "D401",   # Not enforcing the imperative verb rule.
    "DOC201", # Not documenting generic return types
    "DOC402", # Not documenting generic `yield` types
    "DOC501", # Not explicitly documenting raised exception types
]
unfixable = [
    "E501",   # Line length handled in other ways by Ruff Formatter.
    "ERA",    # Don't delete commented out code.
    "RUF100", # Unused `noqa` directive. Annoying when toggling rules.
]
# Extra Options
flake8-annotations.allow-star-arg-any = true
flake8-quotes.inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"ext/beta.py" = ["ANN201"]
"*.ipynb" = [
    "I001", # completely buggy in notebook cells
    "ANN204", 
    "D", 
    "DOC", 
    "ERA", 
    "F404", 
    "T20", 
    "W391"
]

[tool.ruff.format]
quote-style = "double"           # Like Black, use double quotes for strings.
indent-style = "space"           # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = true # Unlike Black (false), do not respect magic trailing commas (let's be strict).
line-ending = "lf"               # Unlike Black ("auto"), set the line ending to LF so it's consistent with uv.

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest]
addopts = ["-vv", "-p", "no:cacheprovider", "--disable-warnings"]
norecursedirs = ["env/*", "venv/*", ".venv/*"]
filterwarnings = ["ignore::DeprecationWarning"]
# testpaths = ["tests/"]
# python_files = ["test_*.py"]